--- a/olympics/src/HomePage.module.css
+++ b/olympics/src/HomePage.module.css
@@ -3,52 +3,40 @@
   flex-direction: column;
   align-items: center;
   width: 100%;
-  padding: 20px;
-  box-sizing: border-box;
 }
 
 .banner {
   width: 100%;
-  text-align: center;
-  margin-bottom: 20px;
+  position: relative; /* Needed to position the title over the image */
 }
 
-.olympicImage {
-  width: 200px; /* Adjust based on actual size */
-  height: auto;
-}
-
-.title {
-  font-size: 24px;
-  color: #333;
-  margin-top: 10px;
-}
-
-.featuredAthlete {
+.bannerImage {
   width: 100%;
-  display: flex;
-  justify-content: center;
-  margin-bottom: 20px;
+  
+  display: block; /* Remove any space below the image */
+  height: 50vh;
 }
 
-.featuredImage {
-  max-width: 300px; /* Adjust based on actual size */
-  height: auto;
-  border-radius: 10px;
+.bannerTitle {
+  position: absolute;
+  right: 50px; /* Adjust as needed */
+  bottom: 20px; /* Adjust as needed */
+  color: white; /* Ensure the title is visible on the image */
+  font-size: 2rem; /* Large text */
+  text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5); /* Enhance readability against potentially complex background */
 }
 
 .searchAndFilters {
+  width: 100%;
   display: flex;
   flex-direction: column;
-  width: 100%;
   align-items: center;
-  margin-bottom: 20px;
+  margin-top: 20px; /* Space from the image */
 }
 
 @media (min-width: 768px) {
   .searchAndFilters {
     flex-direction: row;
     justify-content: space-between;
-    align-items: center;
   }
 }
